<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">X-bionic</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="welcome">无限增值服务应用，欢迎您！</string>
    <string name="user">用户名</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="telphone">输入手机号</string>
    <string name="yanzhengma">获取验证码</string>
    <string name="empower">授权</string>
    <string name="logout">注销</string>
    <string name="weibo_attestation">微博认证OAUTH2.0</string>
    <string name="dangdian_login">单点登录sso</string>
    <color name="demo">#eb3c12</color>
    <string name="product_buy">产品购买</string> 
    <string name="man_story">达人故事</string>
    <string name="X_action">X的活动</string>
    <string name="X_introduce">X的介绍</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="search">搜索</string>
    <string name="product_detail">商品详情</string>
    <string name="myshoppingcart">我的购物车</string>
    <string name="settle_accounts">结算</string>
    <string name="product_information">商品信息</string>
    <string name="share">分享</string>
    <string name="shoppingcart">购物车</string>
    <string name="buy">购买</string>
    <string name="collection">收藏</string>
   
    

</resources>
