<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/allbackground"   
    >

    <FrameLayout
        android:id="@+id/productinformation_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >
    </FrameLayout>

    <RadioGroup
        android:id="@+id/productinformation_radiogroup_detail"
        android:layout_width="match_parent"
        android:layout_height="70dp"      
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/productinformation_radiobutton_share"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
            android:textColor="#ffffff"
            android:text="@string/share" />

        <RadioButton
            android:id="@+id/productinformation_radiobutton_shoppingcart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:textColor="#ffffff"
            android:gravity="center"
            android:text="@string/shoppingcart" />

        <RadioButton
            android:id="@+id/productinformation_radiobutton_buy"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:textColor="#ffffff"
            android:gravity="center"
            android:text="@string/buy" />

        <RadioButton
            android:id="@+id/productinformation_radiobutton_collection"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:button="@null"
            android:gravity="center"
            android:text="@string/collection" />
    </RadioGroup>
</LinearLayout>
