<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/peoplebackground"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/tribe_framelayout"
        android:layout_width="match_parent"
        android:layout_height="50dp" >

        <TextView
            android:id="@+id/login_textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/title_back"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="#919290"
            android:textSize="25dp" />

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/back_btn_normal" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tribe_framelayout"
            android:layout_centerHorizontal="true"
            android:text="@string/welcome"
            android:textColor="#f0f0f0"
            android:textSize="20dp" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
       >
        
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >

         <EditText
             android:id="@+id/user_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="25dp"
             android:layout_marginRight="25dp"
             android:layout_marginTop="40dp"
             android:hint="@string/user"
             android:gravity="center"
             android:ems="10" />

         <EditText
             android:id="@+id/password_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="100dp"
             android:layout_marginLeft="25dp"
             android:layout_marginRight="25dp"
             android:hint="@string/password"
             android:gravity="center"
             android:inputType="textPassword" 
             android:ems="10" />

         <ImageView
             android:id="@+id/user_imageView"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:background="@drawable/personpicture"
             android:layout_marginTop="40dp"
             android:layout_marginLeft="40dp" />

         <ImageView
             android:id="@+id/password_imageView"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:src="@drawable/keypicture"
             android:layout_marginTop="100dp"
             android:layout_marginLeft="40dp" />

         <Button
             android:id="@+id/enter_tribe_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="180dp"
             android:layout_marginLeft="25dp"
             android:layout_marginRight="25dp"
             android:background="@drawable/enterpicture" />

         <Button
             android:id="@+id/forget_password_button"
             android:layout_width="wrap_content"
             android:layout_height="20dp"
             android:background="@drawable/passwordpicture"
             android:layout_marginLeft="25dp"
             android:layout_marginTop="270dp"
              />
        
    </FrameLayout>

    </LinearLayout>
</LinearLayout>